--- a/html/TransparentCSS_v3.0/css/style.css
+++ b/html/TransparentCSS_v3.0/css/style.css
@@ -1,1 +1,17 @@
+@import url("fonts.css");
+@import url("root.css");
 
+@import url("elements/input.text.css");
+@import url("elements/button.css");
+@import url("elements/body.css");
+@import url("elements/div.css");
+@import url("elements/a.css");
+@import url("elements/h.css");
+
+@import url("special/background-overlapper.css");
+@import url("special/element-description.css");
+@import url("special/loading-animation.css");
+@import url("special/console.css");
+
+@import url("classes/hided.css");
+@import url("classes/fonts.css");
